add index file and copy release directory

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "webpack --watch --config ./webpack.config.js",
+    "prepare": "cp ./src/index.html ./public/index.html",
     "build": "webpack --config ./webpack.config.js",
     "deploy": "npm run build && gh-pages -d public"
   },
