build stylesheets at webpack

--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   },
   "homepage": "https://github.com/mattari-inc/corporate#readme",
   "devDependencies": {
+    "css-loader": "^2.1.1",
     "gh-pages": "^2.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-fix-style-only-entries": "^0.2.1"
   }
 }
