--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "webpack --watch --config ./webpack.config.js",
-    "prepare": "cp ./src/index.html ./public/index.html",
+    "prepare": "cp ./src/index.html ./public/index.html && cp CNAME ./public/CNAME",
     "build": "webpack --config ./webpack.config.js",
     "deploy": "npm run prepare && npm run build && gh-pages -d public"
   },
