--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
   },
   "homepage": "https://github.com/mattari-inc/corporate#readme",
   "devDependencies": {
+    "bulma": "^0.7.4",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
     "gh-pages": "^2.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-fix-style-only-entries": "^0.2.1"
