--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/mattari-inc/corporate#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.1",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "bulma": "^0.7.4",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
@@ -34,5 +38,8 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-fix-style-only-entries": "^0.2.1"
+  },
+  "dependencies": {
+    "react": "^16.8.4"
   }
 }
